fix products alignment

--- a/src/assets/sass/sections/_products.scss
+++ b/src/assets/sass/sections/_products.scss
@@ -58,6 +58,7 @@
         }
 
         @media only screen and (max-width: $bp-medium) {
+            padding: 3rem 0;
             text-align: center;
         }
     }
